objects/learn_College__c.object
<CustomObject>
    <description>&apos;safsdnaf dsgfsdg</description>
    <fields>
        <fullName>Account_1__c</fullName>
        <description>wer</description>
        <inlineHelpText>sdjfhsd dgd sfg</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Colleges</relationshipLabel>
        <relationshipName>Colleges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabd</fullName>
                </value>
                <value>
                    <fullName>Vizag</fullName>
                </value>
                <value>
                    <fullName>bangalore</fullName>
                </value>
                <value>
                    <fullName>mysore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Colleges</relationshipLabel>
        <relationshipName>Colleges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>KARNATAKA</fullName>
                </value>
                <value>
                    <fullName>MAHARASTRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Students</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>courses_offered__c</fullName>
        <label>courses offered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>MECH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>principal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>principal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>College</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <recordTypes>
        <fullName>Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>courses_prinicipal</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Class&apos; &amp;&amp; (ISBLANK(principal__c) )&amp;&amp; ISPICKVAL(courses_offered__c, &apos;Industrial&apos;)</errorConditionFormula>
        <errorMessage>Principal Mandatory if industrial selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Open_date__c) ||  (Open_date__c &lt;  TODAY() +2)</errorConditionFormula>
        <errorDisplayField>Open_date__c</errorDisplayField>
        <errorMessage>Date Cannot be Blank or less than 2 days from today</errorMessage>
    </validationRules>
</CustomObject>